# minigrad

./: .gitignore  README.md  generate_stubs.sh  load.sh  requirements.txt
.github/workflows/: ci.yml
core/: CMakeLists.txt  bindings.cpp  consts.h  nn.cpp  nn.hpp  value.cpp  value.h
src/: demo.py  nn.py
test/: test.py
